<resources>
    <string name="app_name">Cookle</string>

    <string name="pork">Pork</string>
    <string name="beef">Beef</string>
    <string name="chicken">Chicken</string>
    <string name="meat_amp_fish"><![CDATA[Meat & Fish]]></string>
    <string name="bacon">Bacon</string>
    <string name="calamari">Calamari</string>
    <string name="octopus">Octopus</string>
    <string name="mussels">Mussels</string>
    <string name="shrimps">Shrimps</string>
    <string name="fish_fillet">Fish Fillet</string>
    <string name="pasta_amp_rice"><![CDATA[Pasta & Rice]]></string>
    <string name="lasagna">Lasagna</string>
    <string name="tagliatelle">Tagliatelle</string>
    <string name="rigatoni">Rigatoni</string>
    <string name="spaghetti">Spaghetti</string>
    <string name="farfaline">Farfaline</string>
    <string name="canelloni">Canelloni</string>
    <string name="ravioli">Ravioli</string>
    <string name="tortellini">Tortellini</string>
    <string name="white_rice">White Rice</string>
    <string name="rissoto">Rissoto</string>
    <string name="wild_rice">Wild Rice</string>
    <string name="barley">Barley</string>
    <string name="yellow_rice">Yellow Rice</string>
    <string name="checkbox1">CheckBox</string>
    <string name="vegetables_amp_fruits"><![CDATA[Vegetables & Fruits]]></string>
    <string name="tomato">Tomato</string>
    <string name="lettuce">Lettuce</string>
    <string name="cabbage">Cabbage</string>
    <string name="carrot">Carrot</string>
    <string name="potato">Potato</string>
    <string name="corn">Corn</string>
    <string name="broccoli">Broccoli</string>
    <string name="beet">Beet</string>
    <string name="pepper">Pepper</string>
    <string name="mushrooms">Mushrooms</string>
    <string name="orange">Orange</string>
    <string name="apple">Apple</string>
    <string name="pear">Pear</string>
    <string name="pineapple">Pineapple</string>
    <string name="lemon">Lemon</string>
    <string name="legumes">Legumes</string>
    <string name="peas">Peas</string>
    <string name="leutils">Leutils</string>
    <string name="beans">Beans</string>
    <string name="chick_peas">Chick peas</string>
    <string name="checkbox2">CheckBox</string>
    <string name="checkbox3">CheckBox</string>
    <string name="herbs_amp_spices"><![CDATA[Herbs & Spices]]></string>
    <string name="parsley">Parsley</string>
    <string name="spearmint">Spearmint</string>
    <string name="rosemary">Rosemary</string>
    <string name="thyme">Thyme</string>
    <string name="oregano">Oregano</string>
    <string name="mint">Mint</string>
    <string name="basil">Basil</string>
    <string name="anise">Anise</string>
    <string name="black_pepper">Black Pepper</string>
    <string name="paprica">Paprica</string>
    <string name="smoked_paprica">Smoked Paprica</string>
    <string name="cumin">Cumin</string>
    <string name="curry">Curry</string>
    <string name="coriander">Coriander</string>
    <string name="cayenne_pepper">Cayenne pepper</string>
    <string name="cinnamon">Cinnamon</string>
    <string name="checkbox4">CheckBox</string>
    <string name="checkbox5">CheckBox</string>
    <string name="sauces">Sauces</string>
    <string name="tomato_pulp">Tomato pulp</string>
    <string name="mustard">Mustard</string>
    <string name="cream">Cream</string>
    <string name="barbeque_sauce">Barbeque sauce</string>
    <string name="chicken_sauce">Chicken sauce</string>
    <string name="mayonnaise">Mayonnaise</string>
    <string name="button1">Button</string>
    <string name="button2">Button</string>
    <string name="button3">Button</string>
    <string name="button4">Button</string>
    <string name="checkbox">CheckBox</string>
    <string name="cookle">Cookle</string>
    <string name="todo">TODO</string>
    <string name="invi1">Button</string>
    <string name="invi2">Button</string>
    <string name="recname">TextView</string>
    <string name="todo1">TODO</string>
    <string name="edittext">EditText</string>
    <string name="exec">TextView</string>
    <string name="invi4">Button</string>
    <string name="searchbuttonedit">Search</string>
</resources>
