<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3403A9F4"
    tools:context=".SearchResults">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="409dp"
        android:layout_height="521dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RecName"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/invi1"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/recIngredients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:padding="15dp"
                    android:text="@string/edittext"
                    android:textAlignment="viewStart"
                    android:textSize="16sp"
                    tools:ignore="MissingConstraints" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/invi2"
                    android:visibility="invisible" />
            </LinearLayout>

            <View
                android:id="@+id/divider20"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/recExecution"
                    android:layout_width="10dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:text="@string/exec"
                    android:textAlignment="viewStart"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/RecName"
        android:layout_width="252dp"
        android:layout_height="101dp"
        android:fontFamily="@font/nunito_semibold"
        android:gravity="center"
        android:text="@string/recname"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mImage"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007" />

    <ImageView
        android:id="@+id/mImage"
        android:layout_width="98dp"
        android:layout_height="101dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/nunito_semibold"
        android:gravity="center"
        android:text="@string/recname"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mImage"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>